<resources>
    <string name="app_name">Messenger</string>
    <string name="login_header">Вход</string>
    <string name="login_textView">Логин:</string>
    <string name="password_textView">Пароль:</string>
    <string name="login_button">Войти</string>
    <string name="register_invite">Или зарегистрироваться</string>
    <string name="register_header">Регистрация</string>
    <string name="register_login_textView">Логин:</string>
    <string name="register_password_textView">Пароль:</string>
    <string name="register_password_textView_again">Повторить пароль:</string>
    <string name="register_button">Зарегистироваться</string>
    <string name="sign_in_title">Войти</string>
    <string name="sign_up_title">Зарегистрироваться</string>
    <string name="log_out_title">Выйти</string>
    <string name="chat_create_title">Создать чат</string>
    <string name="chat_title_lable">Чат:</string>
    <string name="chat_owner_label">Создатель:</string>
    <string name="delete_chat_title">Удалить чат</string>
    <string name="contacts_title">Контакты</string>
    <string name="create_contact">Создать новый контакт</string>
    <string name="contact_title_lable">Логин: </string>
    <string name="create_chat_lable">Название чата:</string>
    <string name="members_chat_label">Участники</string>
    <string name="add_member_button">Добавить участника</string>
    <string name="create_chat_button">Создать чат</string>
    <string name="send_button">></string>
    <string name="register_username_textView">Имя:</string>
    <string name="username_set_header">Установка имени пользователя</string>
    <string name="username_button">Установить</string>
    <string name="username_title">Установить имя пользователя</string>
    <string name="contact_title_lable_username">Имя пользователя</string>
</resources>