<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_header"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/login_layout"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textFontWeight="700"/>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/password_layout" >
        <TextView
            android:id="@+id/login_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/login_textView" />
        <EditText
            android:id="@+id/login_edit"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:autofillHints="login"
            android:inputType="text"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/error_login_message">
        <TextView
            android:id="@+id/password_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/password_textView" />
        <EditText
            android:id="@+id/password_edit"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/error_login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/login_button"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/error_text"/>

    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/login_button"
        android:layout_above="@id/register_invite"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"/>

    <TextView
        android:id="@+id/register_invite"
        android:layout_marginTop="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_invite"/>

</RelativeLayout>