<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChatCreateActivity">

    <LinearLayout
        android:id="@+id/chat_name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_chat_lable"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/chat_create_edit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/members_text"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/chat_name_layout"
        android:text="@string/members_chat_label"
        android:textSize="20sp"/>

    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/add_member_button"
        android:layout_below="@id/members_text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_member_button"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="25dp"
        android:layout_below="@id/add_member_button"
        android:id="@+id/recycler_view_members"
        android:layout_width="match_parent"
        android:layout_height="350dp" />

    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/create_chat_button"
        android:layout_below="@id/recycler_view_members"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_chat_button"/>

    <TextView
        android:id="@+id/error_create_chat_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/create_chat_button"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/error_text"/>


</RelativeLayout>