<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_header"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/register_login_layout"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textFontWeight="700"/>

    <LinearLayout
        android:id="@+id/register_login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/register_password_layout" >
        <TextView
            android:id="@+id/register_login_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/register_login_textView" />
        <EditText
            android:id="@+id/register_login_edit"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:autofillHints="login"
            android:inputType="text"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/register_password_layout_again">
        <TextView
            android:id="@+id/register_password_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/register_password_textView" />
        <EditText
            android:id="@+id/register_password_edit"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_password_layout_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/error_register_message">
        <TextView
            android:id="@+id/register_password_textView_again"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/register_password_textView_again" />
        <EditText
            android:id="@+id/register_password_edit_again"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/error_register_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/register_button"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/error_text"/>

    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/register_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"/>

</RelativeLayout>